# etic-terraform

./: .gitignore  LICENSE  README.md
application/: Dockerfile  docker-compose.yml  pyproject.toml
application/api/api/: admin.py  serializer.py  urls.py  views.py
application/api/api/models/: users.py
application/api/setup/: settings.py  urls.py
terraform/: backend.tf  locals.tf  provider.tf  vars.tf
