[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
pdoc3 = "^0.10.0"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
